Layout issues

--- a/style/base.css
+++ b/style/base.css
@@ -111,6 +111,7 @@ form#download:before {
 	right: 0;
 	bottom: 0;
 	left: 0;
+	z-index: -1;
 }
 
 #component-index {
@@ -130,7 +131,6 @@ form#download:before {
 	margin-right: auto;
 	margin-left: auto;
 	transition: all 1s;
-	z-index: 0;
 }
 
 .component-index button {
@@ -145,7 +145,7 @@ form#download:before {
 
 .component-index .button-bar {
 	border-style: none;
-	padding-left: 15px;
+	padding-left: 5px;
 	padding-right: 15px;
 	transition: all 1s;
 }
@@ -156,7 +156,7 @@ form#download:before {
 	float: right;
 	margin-top: -43px;
 	position: relative;
-	margin-right: 28px;
+	margin-right: 5px;
 }
 
 .component-index .bundle-type {
@@ -184,7 +184,6 @@ form#download:before {
 
 .component-index h2 {
 	clear: both;
-	padding-left: 3%;
 	font-size: 15px;
 	font-weight: bold;
 	text-transform: uppercase;
@@ -194,6 +193,7 @@ form#download:before {
 	color: silver;
 	transition: all 1s;
 	-webkit-transition: all 1s;
+	padding-left: 5px;
 }
 
 .state-home .component-index h2 {
@@ -203,18 +203,18 @@ form#download:before {
 
 /* @group Labels */
 
-.state-documentation .component-index .checklist label {
+#download:target .component-index .checklist label {
 }
 
 /* @end */
 
 /* @group Label link */
 
-.state-documentation .component-index .checklist label a {
+#download:target .component-index .checklist label a {
 	z-index: 0;
 }
 
-.state-download .component-index .checklist label a {
+#download:target .component-index .checklist label a {
 	left: 30px;
 	z-index: -1;
 }
@@ -596,11 +596,18 @@ html.js .postit.guide.closed {
 	border-style: none;
 	transition: height 1s;
 	margin: 0;
-	background-color: silver;
 	height: 280px;
 	overflow: hidden;
 	transition: all 1s;
+	background: silver url(../media/hero-image.jpg) no-repeat center;
+	background-size: 100% auto;
 }
+
+@media only screen and (max-width: 1133px) {
+
+#documentation blockquote {
+	background-size: auto 100% ;
+} }
 
 #documentation:target blockquote,
 #download:target blockquote  {
